MCLength: Trouver la longueur d'un run de Monte-Carlo nécessaire à une bonne approximation de $\mu_E(s_0)$.
Pour faire l'expérience :
     : make MCLength
dans le dossier de plus haut niveau.

Avec une trajectoire de 30 transitions, on a une estimation sans variance ou presque. On enfonce notre objectif affiché.

--- a/Makefile.org
+++ b/Makefile.org
@@ -137,6 +137,11 @@ LAFEM_Exp6_EB:
 LAFEM_Exp7:
 	make -C InvertedPendulum LAFEM_Exp7_Vphi.pdf LAFEM_Exp7_Vmu.pdf
     #+end_src
+   - MCLength (InvertedPendulum)
+    #+begin_src makefile :tangle Makefile
+MCLength:
+	make -C InvertedPendulum MCLength
+    #+end_src
      
 ** TaskTransfer
    - TT_Exp1 (GridWorld)
